# deadem

./: .gitignore  AGENTS.md  README.md  package.json
data/: replay-manifest.json
docs/: 24-lane-occupancy-human-review.md  ARCHITECTURE.md  CODEX_QUEUE_RUNNER.md  DATA_DICTIONARY.md  DECISIONS.md  EXPERIMENT_INDEX.md  NEXT_MILESTONE.md  PARSER_FAILURE_CATALOG.md  PROJECT_ROADMAP.md  PROJECT_STATE.md  REPOSITORY_GUIDE.md  WORKFLOW.md
experiments/: 01-validate-replay.js  02-inspect-player-fields.js  03-normalize-player-snapshots.js  04-analyze-controller-pawn-lifecycle.js  05-discover-game-clock.js  06-reconcile-tick-domains.js  07-player-timeline.js  08-analyze-data-quality.js  09-build-canonical-player-timeline.js  10-map-hero-identities.js  11-reconcile-hero-identities.js  12-identify-replay-build.js  13-enrich-heroes-and-map-lanes.js  14-discover-items-and-upgrades.js  15-decode-upgrade-tokens.js  16-reconcile-lane-topology.js  17-build-spatial-presence-model.js  18-build-movement-segments.js  19-audit-rotation-candidates.js  20-resolve-journey-destinations.js  21-validate-and-consolidate-rotation-candidates.js  22-build-lane-occupancy-model.js  23-calibrate-lane-occupancy.js  24-autonomous-independent-lane-occupancy-audit.js  24-build-stratified-lane-occupancy-validation.js  (+5 more)
python/: pyproject.toml
python/deadem/: __init__.py
python/deadem/video_pipeline/: README.md  __init__.py  annotations.py  cli.py  config.py  detector.py  errors.py  frame_extractor.py  metadata.py  ocr.py  pipeline.py  roi.py  schemas.py  serialization.py  tracker.py  vlm.py
(+1289 files in other folders)
