[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deadem-video-pipeline"
version = "0.1.0"
description = "Local video evidence pipeline for Deadem"
readme = "deadem/video_pipeline/README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pydantic>=2",
  "opencv-python-headless"
]

[project.optional-dependencies]
video-base = [
  "numpy",
  "pydantic>=2",
  "opencv-python-headless"
]
video-detection = [
  "ultralytics"
]
video-ocr = [
  "paddleocr"
]
video-ffmpeg = [
  "ffmpeg-python"
]
video-all = [
  "ultralytics",
  "paddleocr",
  "ffmpeg-python"
]
dev = [
  "pytest"
]

[project.scripts]
deadem-video = "deadem.video_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deadem*"]

